--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.7",
     "react-redux": "^7.2.3",
     "react-redux-router": "^0.0.14",
     "react-router-dom": "^5.2.0",
